--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,6 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-ExportedTestSuites/
-
-Results/
-
-test_suites/
-
-
+/TestSuiteArchives/
+/test_suites/
+/Results/
